--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "@hapi/joi": "^17.1.1",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.2"
   }
 }
